<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="12dp"
    android:background="@drawable/btn_background"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardInnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background_selector">


        <ImageView
            android:id="@+id/server_flag_image"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/default_server_text"
            android:src="@drawable/ic_server_flage_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Country Name -->

        <!-- IP Address -->
        <TextView
            android:id="@+id/tv_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="@string/country_name_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_ip_address"
            app:layout_constraintStart_toEndOf="@+id/server_flag_image"
            app:layout_constraintTop_toTopOf="@+id/server_flag_image"
            tools:layout_editor_absoluteY="11dp" />

        <!-- Speed -->
        <TextView
            android:id="@+id/tv_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_country_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/IP_address"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_speed"
            app:layout_constraintStart_toStartOf="@+id/tv_country_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name"
            tools:layout_editor_absoluteX="226dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ip_address"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/speed_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/server_flag_image"
            app:layout_constraintStart_toStartOf="@+id/tv_country_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip_address"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="30dp" />

        <!-- Ping -->
        <TextView
            android:id="@+id/tv_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ip_address"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/ping_text"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/server_flag_extend"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/tcp_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/server_flag_extend"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/server_flag_extend"
            android:layout_width="4dp"
            android:layout_height="9dp"
            android:layout_margin="12dp"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>