<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/info_dialog_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/strong_violet" />

        <TextView
            android:id="@+id/info_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_server_protocol"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/info_dialog_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/info_dialog_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/info_text_description"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:textSize="14sp"
            android:lineSpacingExtra="6dp"
            app:layout_constraintTop_toBottomOf="@id/info_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/info_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got_it"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/strong_violet"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/info_dialog_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
